# etl

./: .ICEBERG_DEVELOPMENT_PLAN.md.swp  .cliff.toml  .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESTINATION_STRUCTURE.md  DEVELOPMENT.md  ICEBERG_DEVELOPMENT_PLAN.md  PLAN.md  README.md  astro.config.mjs  cliff.toml  clippy.toml  deny.toml  dependencies.dot  docker-compose.yaml  ducklake_connect.sql  ducklake_quack_client.sql  ducklake_quack_server.sql  ducklake_setup.sql  etl_test.yaml  flake.nix  index.html  justfile  mkdocs.yaml  package-lock.json  package.json  pipeline-config.yaml  replication_bis.db  requests.http  rustfmt.toml  sitemap.xml
config/: Cargo.toml  README.md
config/src/: environment.rs  lib.rs  load.rs  secret.rs
crates/etl/: Cargo.toml  README.md
crates/etl-api/: Cargo.toml  Dockerfile  README.md
crates/etl-benchmarks/: BENCHMARK_RUNBOOK.md  Cargo.toml  HOTPATH_RUNBOOK.md  README.md
crates/etl-destinations/: Cargo.toml  README.md
crates/etl-examples/: Cargo.toml  README.md
crates/etl-maintenance/: Cargo.toml
crates/etl-replicator/: Cargo.toml  Dockerfile
crates/xtask/: Cargo.toml  README.md
etl/: Cargo.toml  README.md
etl-api/: Cargo.toml  Dockerfile  README.md
etl-api/.sqlx/: query-4926a8644040d14b84fb1527dca1b2277d5595f1d95bfa33a942b09933594427.json  query-4e1df0e97f5871424e41ab350b4cf0aba97b72849516d015348b2821f5ba298a.json  query-67e9d0f49e0645a37b5b95a636a88d8e4ba7aa392349207a6dcff6cbb1a90907.json  query-8d3d991029f43c1ec0dd42bf7835e6e50de3ca5e59e8ce9d2bedebb50eab9b85.json  query-912ac1601aab8e7ff974e26976cc15701f1cb7abdea0d8844fc273c789bea22c.json  query-96d9fa4778474bc96f891277fdec408fc2c5956f7c8f96fc14d906484945cf7b.json  query-d845a89057d9e24e3117bb292308a45cebefcfabf456fbb789391db5e79cc964.json  query-f5bd74f33d442aa5c1c81b7d2d09fcddbb4abd4e4e2f9d7fe07ea1b02aa678e5.json
etl-api/configuration/: base.yaml  dev.yaml
etl-api/migrations/: 20250827000000_base.sql  20250905100000_update_default_image_function.sql
etl-api/src/: authentication.rs  config.rs  encryption.rs  feature_flags.rs  k8s_client.rs  lib.rs  main.rs  metrics.rs  rate_limiting.rs  sentry.rs  sentry_scrubbing.rs  span_builder.rs  startup.rs  utils.rs
etl-api/tests/: destinations.rs  destinations_pipelines.rs  etl_tables_missing.rs  health_check.rs  images.rs  main.rs  metrics.rs  missing_etl_tables.rs  mod.rs  pipelines.rs  publications.rs  sources.rs  tenants.rs  tenants_sources.rs  test_connections.rs  validators.rs
etl-benchmarks/: Cargo.toml  README.md
etl-benchmarks/benches/: table_copies.rs
etl-benchmarks/scripts/: benchmark.sh  prepare_tpcc.sh
etl-benchmarks/src/: common.rs  lib.rs  table_copy.rs  table_streaming.rs
etl-config/: Cargo.toml
etl-config/src/: ducklake.rs  environment.rs  lib.rs  load.rs  secret.rs
etl-destinations/: .PROPOSAL.md.swp  Cargo.toml  Dockerfile.test  ICEBERG_TODO.md  Makefile  README.md  README_DATABEND.md  docker-compose.test.yml  lcov-unit.info
etl-destinations/bigquery/: Cargo.toml
etl-destinations/iceberg/: Cargo.toml
etl-destinations/src/: egress.rs  encryption.rs  lib.rs  metrics.rs  retry.rs  schema.rs  table_name.rs
etl-destinations/test-environment/: README.md  docker-compose.yml  e2e-test.rs  init-source.sql  run-e2e-test.sh
etl-destinations/tests/: bigquery_pipeline.rs  clickhouse_pipeline.rs  databend_basic.rs  databend_pipeline.rs  duckdb_destination.rs  ducklake_destination.rs  ducklake_pipeline.rs  iceberg_client.rs  iceberg_deletion_vector.rs  iceberg_destination.rs  iceberg_pipeline.rs  main.rs  pipeline_with_bigquery.rs  pipeline_with_iceberg.rs  redis.rs  snowflake_sql_client_mock.rs
etl-examples/: Cargo.toml  README.md
etl-examples/src/: main.rs
etl-iceberg-merger/: Cargo.toml  Dockerfile  README.md
etl-iceberg-merger/k8s/: configmap.yaml  cronjob.yaml  secret.yaml
etl-iceberg-merger/src/: config.rs  index.rs  jemalloc_metrics.rs  lib.rs  main.rs  merge.rs  scheduler.rs
etl-iceberg-merger/tests/: iceberg_integration.rs  merge_integration.rs
etl-merger/: Cargo.toml  DEMO.md
etl-merger/src/: changelog_reader.rs  config.rs  error.rs  lib.rs  main.rs  merger.rs  mirror_writer.rs  progress.rs  test_utils.rs
etl-merger/tests/: integration_test.rs
etl-mysql/: Cargo.toml  README.md
etl-mysql/src/: lib.rs  liblib.rlib  version.rs
etl-postgres/: Cargo.toml
etl-postgres/src/: db.rs  lag.rs  lib.rs  schema.rs  slots.rs  version.rs
etl-replicator/: Cargo.toml  Dockerfile  README.md
etl-replicator/configuration/: base.yaml  dev.yaml
etl-replicator/migrations/: 20250616122411_create_replication_state_table.sql  20250812120000_create_table_mappings.sql  20250827000000_base.sql  20251001000100_add_schema_versions.sql  20251007000100_add_primary_key_position_to_table_columns.sql  20251007000100_schema_change_triggers.sql  20251007000200_schema_change_triggers.sql  20251127090000_schema_change_messages.sql  20251127120000_column_schema_extensions.sql
etl-replicator/scripts/: run_migrations.sh
etl-replicator/src/: config.rs  core.rs  error.rs  error_notification.rs  error_reporting.rs  feature_flags.rs  jemalloc_metrics.rs  main.rs  metrics.rs  migrations.rs  notification.rs  notifications.rs  sentry.rs  sentry_capture.rs  tokio_metrics.rs
etl-validation/: Cargo.toml
etl-validation/src/: error.rs  lib.rs  source.rs
etl-validation/tests/: iceberg_validation.rs  source_validation.rs
etl/benches/: table_copies.rs
etl/examples/: bigquery.rs
etl/migrations/: 20251127090000_schema_change_messages.sql  20251127120000_column_schema_extensions.sql  20251205000000_schema_versioning.sql  20251211000000_destination_schema_states.sql  20251211000000_destination_tables_metadata.sql  20260415090000_schema_storage_ddl_support.sql  20260415100000_schema_change_messages.sql
etl/scripts/: run_migrations.sh
etl/src/: egress.rs  error.rs  failpoints.rs  lib.rs  macros.rs  metrics.rs  migrations.rs  pipeline.rs
etl/tests/: failpoints_pipeline.rs  main.rs  migrations.rs  (+13 more)
fuzz/: .gitignore  Cargo.toml
xtask/: Cargo.toml
(+1378 files in other folders)
