[package]
name = "etl-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "etl-api"

[dependencies]
etl-config = { workspace = true, features = ["utoipa"] }
etl-postgres = { workspace = true, features = ["replication"] }
etl-telemetry = { workspace = true }

actix-web = { workspace = true, features = ["macros", "http2"] }
actix-web-httpauth = { workspace = true }
actix-web-metrics = { workspace = true }
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
aws-lc-rs = { workspace = true, features = ["alloc", "aws-lc-sys"] }
base64 = { workspace = true, features = ["std"] }
constant_time_eq = { workspace = true }
chrono = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
pg_escape = { workspace = true }
rand = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true }
sentry = { workspace = true, features = ["actix"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "json",
    "migrate",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true, default-features = false }
tracing-actix-web = { workspace = true, features = ["emit_event_on_error"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web", "reqwest"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
etl-postgres = { workspace = true, features = ["test-utils", "sqlx"] }

insta = { workspace = true, features = ["json", "redactions"] }

[[test]]
name = "destinations"
path = "tests/destinations.rs"

[[test]]
name = "destinations_pipelines"
path = "tests/destinations_pipelines.rs"

[[test]]
name = "etl_tables_missing"
path = "tests/etl_tables_missing.rs"

[[test]]
name = "health_check"
path = "tests/health_check.rs"

[[test]]
name = "images"
path = "tests/images.rs"

[[test]]
name = "metrics"
path = "tests/metrics.rs"

[[test]]
name = "pipelines"
path = "tests/pipelines.rs"

[[test]]
name = "sources"
path = "tests/sources.rs"

[[test]]
name = "tenants"
path = "tests/tenants.rs"

[[test]]
name = "tenants_sources"
path = "tests/tenants_sources.rs"
