[package]
name = "etl-benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
test = false
doctest = false

[features]
default = []
bigquery = ["dep:etl-destinations", "etl-destinations/bigquery"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, default-features = true, features = ["std", "derive"] }
etl = { workspace = true, features = ["test-utils"] }
etl-config = { workspace = true }
etl-destinations = { workspace = true, optional = true }
etl-postgres = { workspace = true, features = ["sqlx"] }
etl-telemetry = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true, default-features = true }

[lints]
workspace = true

[[bench]]
name = "table_copy"
harness = false

[[bench]]
name = "table_streaming"
harness = false
