[package]
name = "etl-config"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true, features = ["yaml"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio-postgres = { workspace = true  }
