[package]
name = "etl-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
utoipa = ["dep:utoipa"]

[dependencies]
config = { workspace = true, features = ["yaml", "json"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
utoipa = { workspace = true, optional = true }
