[package]
name = "etl-destinations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
bigquery = [
    "dep:gcp-bigquery-client",
    "dep:prost",
    "dep:rustls",
    "dep:tracing",
    "dep:tokio",
    "dep:base64",
]
iceberg = [
    "dep:iceberg",
    "dep:iceberg-catalog-rest",
    "dep:arrow",
    "dep:tracing",
    "dep:parquet",
    "dep:uuid",
    "dep:tokio",
]

[dependencies]
etl = { workspace = true }
chrono = { workspace = true }

arrow = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
iceberg = { workspace = true, optional = true }
iceberg-catalog-rest = { workspace = true, optional = true }
parquet = { workspace = true, optional = true, features = ["async", "arrow"] }
prost = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = [
    "aws-lc-rs",
    "logging",
] }
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true, optional = true, default-features = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

[dev-dependencies]
etl = { workspace = true, features = ["test-utils"] }
etl-telemetry = { workspace = true }

chrono = { workspace = true }
futures = { workspace = true }
iceberg-compaction-core = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
