[package]
name = "etl-destinations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
bigquery = [
    "dep:gcp-bigquery-client",
    "dep:prost",
    "dep:rand",
    "dep:tonic",
    "dep:tracing",
    "dep:tokio",
    "dep:base64",
    "dep:metrics",
]
iceberg = [
    "dep:iceberg",
    "dep:iceberg-catalog-rest",
    "dep:arrow",
    "dep:tracing",
    "dep:parquet",
    "dep:uuid",
    "dep:tokio",
    "dep:reqwest",
    "dep:async-trait",
    "dep:serde",
    "dep:serde_json",
]
egress = ["etl/egress"]
# We assume that `test-utils` is always used in conjunction with `bigquery` or `iceberg` thus we only
# put here the extra dependencies needed.
test-utils = ["dep:uuid"]

[dependencies]
etl = { workspace = true }

arrow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
iceberg = { workspace = true, optional = true }
iceberg-catalog-rest = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
parquet = { workspace = true, optional = true, features = ["async", "arrow"] }
prost = { workspace = true, optional = true }
rand = { workspace = true, optional = true, features = ["thread_rng"] }
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, default-features = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

[dev-dependencies]
etl = { workspace = true, features = ["test-utils"] }
etl-telemetry = { workspace = true }

chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
