[package]
name = "etl-iceberg-merger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "etl_iceberg_merger"
path = "src/lib.rs"

[[bin]]
name = "etl-iceberg-merger"
path = "src/main.rs"

[dependencies]
etl-config = { workspace = true }
etl-telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
arrow = { workspace = true, features = ["prettyprint"] }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
humantime-serde = { workspace = true }
iceberg = { workspace = true, features = ["storage-fs"] }
iceberg-catalog-rest = { workspace = true }
metrics = { workspace = true }
parquet = { workspace = true, features = ["arrow", "async"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
secrecy = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }
tikv-jemallocator = { workspace = true }
