[package]
name = "etl-mysql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
test-utils = []
tokio = []
sqlx = []
bigquery = []
replication = ["sqlx"]

[dependencies]
etl-config = { workspace = true }

bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "json",
    "migrate",
    "time",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
