[package]
name = "etl-replicator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
etl = { workspace = true }
etl-config = { workspace = true }
etl-destinations = { workspace = true, features = ["bigquery", "iceberg"] }
etl-telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
secrecy = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
