[package]
name = "etl-replicator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
egress = ["etl/egress", "etl-destinations/egress"]

[dependencies]
etl = { workspace = true }
etl-config = { workspace = true, features = ["supabase"] }
etl-destinations = { workspace = true, features = ["bigquery", "iceberg", "realtime"] }
etl-telemetry = { workspace = true }

configcat = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
secrecy = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }
tikv-jemallocator = { workspace = true }
