[package]
name = "etl"
version = "0.1.0"
edition = "2024"
autotests = false

[[bench]]
name = "table_copies"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["failpoints", "test-utils"]

[dependencies]
config = { workspace = true }
postgres = { workspace = true, features = ["tokio", "replication"] }

bytes = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
pg_escape = { workspace = true }
pin-project-lite = { workspace = true }
postgres-replication = { workspace = true }
prost = { workspace = true, optional = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
rustls-pemfile = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-postgres-rustls = { workspace = true }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
postgres = { workspace = true, features = ["test-utils", "tokio"] }
telemetry = { workspace = true }

clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }


[features]
unknown-types-to-bytes = []
test-utils = []
failpoints = ["fail/failpoints"]
default = ["unknown-types-to-bytes"]
