[package]
name = "etl"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
etl-config = { workspace = true }
etl-postgres = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
pin-project-lite = { workspace = true }
postgres-replication = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-serde_json-1",
] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
