[package]
name = "etl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autotests = false

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
test-utils = ["etl-postgres/test-utils"]
failpoints = ["fail/failpoints"]
egress = []
default = []

[dependencies]

byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
etl-config = { workspace = true }
etl-postgres = { workspace = true, features = ["tokio"] }
fail = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
pg_escape = { workspace = true }
pin-project-lite = { workspace = true }
postgres-replication = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "migrate"] }
sysinfo = { workspace = true, features = ["system"] }
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
tokio-postgres = { workspace = true, features = ["runtime", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
etl-postgres = { workspace = true, features = ["tokio", "test-utils"] }
etl-telemetry = { workspace = true }

[[test]]
name = "main"
path = "tests/main.rs"

[lints]
workspace = true
