[package]
name = "etl-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autotests = false

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/main.rs"
name = "etl-api"

[dependencies]

anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
aws-lc-rs = { workspace = true, features = ["alloc", "aws-lc-sys"] }
axum = { workspace = true, features = ["http1", "http2", "json", "tokio", "tracing", "matched-path"] }
base64 = { workspace = true, features = ["std"] }
chrono = { workspace = true }
configcat = { workspace = true }
constant_time_eq = { workspace = true }
etl = { workspace = true }
etl-config = { workspace = true, features = ["utoipa", "supabase"] }
etl-destinations = { workspace = true, features = ["bigquery", "clickhouse", "ducklake", "iceberg"] }
etl-postgres = { workspace = true, features = ["replication"] }
etl-telemetry = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = ["runtime", "derive", "client", "rustls-tls"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
pg_escape = { workspace = true }
rand = { workspace = true, features = ["std"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
secrecy = { workspace = true }
sentry = { workspace = true, features = ["tower-http", "tower-axum-matched-path"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "json", "migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true, default-features = false }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
etl-destinations = { workspace = true, features = ["test-utils", "bigquery", "clickhouse", "ducklake", "iceberg"] }
etl-postgres = { workspace = true, features = ["test-utils", "sqlx"] }

insta = { workspace = true, features = ["json", "redactions"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "main"
path = "tests/main.rs"

[lints]
workspace = true
