[package]
name = "etl-benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
test = false
doctest = false

[features]
default = []
bigquery = ["dep:etl-destinations", "etl-destinations/bigquery"]
clickhouse = ["dep:etl-destinations", "etl-destinations/clickhouse", "dep:url"]
hotpath = [
    "dep:hotpath",
    "etl/hotpath",
    "etl-telemetry/hotpath",
    "hotpath/hotpath",
    "hotpath/tokio",
]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath", "hotpath/hotpath-cpu"]
hotpath-mcp = ["hotpath", "hotpath/hotpath-mcp"]
snowflake = ["dep:etl-destinations", "etl-destinations/snowflake"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, default-features = true, features = ["std", "derive"] }
etl = { workspace = true, features = ["test-utils"] }
etl-config = { workspace = true }
etl-destinations = { workspace = true, optional = true }
etl-postgres = { workspace = true, features = ["sqlx"] }
etl-telemetry = { workspace = true }
hotpath = { workspace = true, optional = true, features = ["threads"] }
rand = { workspace = true, features = ["thread_rng"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true, default-features = true }
url = { workspace = true, optional = true }

[lints]
workspace = true
